Change default preserveOnDelete to false for automatic cleanup

--- a/cluster-templates/aws-ha/base/clusterdeployment.yaml
+++ b/cluster-templates/aws-ha/base/clusterdeployment.yaml
@@ -39,8 +39,8 @@ spec:
   pullSecretRef:
     name: pull-secret
 
-  # Preserve cluster on delete (safety measure - set to false to auto-cleanup)
-  preserveOnDelete: true
+  # Preserve cluster on delete - set to false so clusters are cleaned up when deleted from Git
+  preserveOnDelete: false
 
   # Power state
   powerState: Running
