--- a/clusters/dev-cluster-01/argocd-application.yaml
+++ b/clusters/dev-cluster-01/argocd-application.yaml
@@ -31,6 +31,7 @@ spec:
     syncOptions:
       - PrunePropagationPolicy=orphan
       - RespectIgnoreDifferences=true
+      - ApplyOutOfSyncOnly=true  # Only manages resources defined in git, prevents tracking Hive-created secrets
     retry:
       limit: 5
       backoff:
