removed unused clusters
Signed-off-by: yashoza19 <yoza@redhat.com>

--- a/cluster-templates/aws-ha/base/clusterdeployment.yaml
+++ b/cluster-templates/aws-ha/base/clusterdeployment.yaml
@@ -18,6 +18,7 @@ spec:
     aws:
       credentialsSecretRef:
         name: aws-credentials
+        namespace: default
       region: us-east-1  # Will be overridden by overlay
 
   # Provisioning configuration
@@ -38,6 +39,7 @@ spec:
   # Pull secret for accessing Red Hat registries
   pullSecretRef:
     name: pull-secret
+    namespace: default
 
   # Preserve cluster on delete - set to false so clusters are cleaned up when deleted from Git
   preserveOnDelete: false
