--- a/cluster-templates/aws-ha/base/install-config-secret.yaml
+++ b/cluster-templates/aws-ha/base/install-config-secret.yaml
@@ -19,7 +19,7 @@ stringData:
       name: master
       platform:
         aws:
-          type: m5.xlarge
+          type: m5.2xlarge
           rootVolume:
             iops: 4000
             size: 120
@@ -28,7 +28,7 @@ stringData:
             - us-east-1a
             - us-east-1b
             - us-east-1c
-      replicas: 3
+      replicas: 1
 
     # Compute (worker) configuration - managed by MachinePool
     compute:
@@ -37,14 +37,14 @@ stringData:
           aws:
             type: m5.2xlarge
             rootVolume:
-              iops: 2000
+              iops: 4000
               size: 100
               type: gp3
             zones:
               - us-east-1a
               - us-east-1b
               - us-east-1c
-        replicas: 3
+        replicas: 0
 
     # Networking configuration
     networking:
