--- a/cluster-templates/aws-ha/base/kustomization.yaml
+++ b/cluster-templates/aws-ha/base/kustomization.yaml
@@ -6,11 +6,14 @@ resources:
   - machinepool-worker.yaml
   - managedcluster.yaml
   - install-config-secret.yaml
+  - deprovision-finalizer-job.yaml
 
 # Common labels applied to all resources
-commonLabels:
-  provisioner: hive
-  managed-by: argocd
+labels:
+  - pairs:
+      provisioner: hive
+      managed-by: argocd
+    includeSelectors: true
 
 # Namespace for all resources (will be overridden by overlay)
 namespace: cluster-placeholder
