--- a/cluster-templates/aws-ha/base/managedcluster.yaml
+++ b/cluster-templates/aws-ha/base/managedcluster.yaml
@@ -35,6 +35,7 @@ spec:
   # Application manager
   applicationManager:
     enabled: true
+    #argocdCluster: false
 
   # Policy controller
   policyController:
